# parquet2rdf

./: Cargo.toml  README.md
examples/: uniprotkb_reviewed_viruses_10239.parquet
src/: main.rs
